--- a/src/styles/Main.module.scss
+++ b/src/styles/Main.module.scss
@@ -1,5 +1,10 @@
 @import "./settings/__settings";
 
+.root {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .title {
   line-height: 1.15;
   font-size: 2rem;
