--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -2,7 +2,7 @@
 
 .title {
   text-decoration: inherit;
-  color:inherit;
+  color:inherit !important;
   text-transform: none;
   display: none;
   @media screen and (min-width: 600px) {
@@ -12,8 +12,12 @@
 
 .menuitem {
   text-decoration: inherit;
-  color:inherit;
+  color:inherit !important;
   text-transform: none;
   font-size: medium;
   color: "inherit";
+
+  &:hover {
+    color: #d1d1d1 !important;
+  }
 }
