--- a/src/styles/Main.module.scss
+++ b/src/styles/Main.module.scss
@@ -3,6 +3,9 @@
 .root {
   padding-left: 1rem;
   padding-right: 1rem;
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
 }
 
 .title {
