--- a/src/styles/Products.module.scss
+++ b/src/styles/Products.module.scss
@@ -53,6 +53,7 @@
   box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
-.input {
-  color: white !important;
+.label {
+  color: white;
+  font-weight: bold;
 }
