--- a/src/styles/Login.module.scss
+++ b/src/styles/Login.module.scss
@@ -1,26 +1,24 @@
 @import "./settings/__settings";
 
 .container {
-    background-color: red;
     flex: 1;
     display: grid;
 
-    grid-template-rows: 1fr 0.5fr 2fr 0.5fr 1fr;
+    grid-template-rows: 1fr 0.5fr 1.5fr 0.5fr 1fr;
     grid-template-columns: 0rem 1fr 1fr 0rem;
 
     @media only screen and (min-width: 600px) {
-        grid-template-rows: 1fr 0.5fr 2fr 0.5fr 1fr;
         grid-template-columns: 0.2fr 1fr 1fr 0.2fr;
     }
 
     @media only screen and (min-width: 1000px) {
-        grid-template-rows: 1fr 0.5fr 2fr 0.5fr 1fr;
         grid-template-columns: 1.5fr 1fr 1fr 1.5fr;
     }
 }
 
 .panel {
     background-color: grey;
+    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75);
     border-radius: 4px;
     grid-row: 2 / 5;
     grid-column: 2 / 4;
@@ -37,21 +35,37 @@
     grid-row: 3;
     grid-column: 2 / 4;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 8vh;
+    gap: 1rem;
 }
 
 .signup {
     grid-row: 4;
     grid-column: 2;
-    justify-content: flex-end;
+    display: flex;
+    align-items: flex-end;
+    margin: 0.5rem;
+    gap: 4px;
+    a {
+        color: rgb(37, 175, 255);
+        text-decoration: underline;
+    }
 }
 
 .loginButton {
-    background-color: blue;
     grid-row: 4;
     grid-column: 3;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    margin: 1rem;
+    margin-right: 2rem;
 }
 
 .usernameField {
+    display: flex;
+    align-items: flex-end;
 }
