--- a/src/styles/Admin.module.scss
+++ b/src/styles/Admin.module.scss
@@ -5,8 +5,7 @@
     display: grid;
 
     grid-template-rows: 50% 50%;
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 1rem;
+    grid-template-columns: 50% 50%;
 }
 
 .tile {
@@ -22,6 +21,7 @@
     grid-column: 1;
     margin-top: 1rem;
     margin-bottom: 1rem;
+    margin-right: 0.5rem;
 }
 
 .product {
@@ -29,6 +29,7 @@
     grid-column: 2;
     margin-top: 1rem;
     margin-bottom: 0.5rem;
+    margin-left: 0.5rem;
 }
 
 .user {
@@ -36,6 +37,7 @@
     grid-column: 2;
     margin-top: 0.5rem;
     margin-bottom: 1rem;
+    margin-left: 0.5rem;
 }
 
 .header {
@@ -52,7 +54,8 @@
 }
 
 .table {
-    height: 38vh;
+    flex: 1;
+    height: 36vh;
 }
 
 .loginContainer {
