--- a/src/styles/Product.module.scss
+++ b/src/styles/Product.module.scss
@@ -92,14 +92,20 @@
     display: flex;
     flex-direction: column;
     background-color: lightblue;
-    flex: 3;
     border-bottom-right-radius: 4px;
     border-top-right-radius: 4px;
+    width: 40vw;
 }
 
 .productImage {
     background-color: lightblue;
     flex: 1;
+    aspect-ratio: 23/9;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .productReview {
