--- a/src/styles/Product.module.scss
+++ b/src/styles/Product.module.scss
@@ -92,9 +92,9 @@
     display: flex;
     flex-direction: column;
     background-color: lightblue;
-    flex: 3;
     border-bottom-right-radius: 4px;
     border-top-right-radius: 4px;
+    width: 40vw;
 }
 
 .productImage {
@@ -105,6 +105,8 @@
 .productReview {
     background-color: yellowgreen;
     flex: 1;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .input {
