Added action button

--- a/src/styles/Product.module.scss
+++ b/src/styles/Product.module.scss
@@ -108,6 +108,13 @@
 
 }
 
+.actionBtn {
+  position: fixed;
+  bottom: 40px;
+  right: 50px;
+
+}
+
 .productReview {
     background-color: yellowgreen;
     flex: 1;
