--- a/src/styles/Admin.module.scss
+++ b/src/styles/Admin.module.scss
@@ -74,6 +74,8 @@
 .formButtonGroup {
     display: flex;
     flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
     margin: 1rem;
 }
 
