--- a/src/styles/Product.module.scss
+++ b/src/styles/Product.module.scss
@@ -117,9 +117,13 @@
 
 .productReview {
     background-color: yellowgreen;
-    flex: 1;
+    height: 40vh;
     overflow-y: scroll;
     overflow-x: hidden;
+    padding: 0.5rem;
+    display: flex;
+    gap: 0.5rem;
+    flex-direction: column;
 }
 
 .input {
